--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,34 @@
+# see http://about.travis-ci.org/docs/user/languages/php/ for more hints
 language: php
+
+# list any PHP version you want to test against
+php:
+  # using major version aliases
+
+  # aliased to 5.2.17
+  - 5.2
+  # aliased to 5.3.29
+  - 5.3
+  # aliased to a recent 5.4.x version
+  - 5.4
+  # aliased to a recent 5.5.x version
+  - 5.5
+  # aliased to a recent 5.6.x version
+  - 5.6
+  # aliased to a recent 7.x version
+  - 7.0
+
+# optionally set up exclusions and allowed failures in the matrix
+matrix:
+  exclude:
+    - php: hhvm
+  allow_failures:
+    - php: 7.0
+
+# configure notifications (email, IRC, campfire etc)
+notifications:
+  email:
+    recipients:
+      - michael@longanime.com.br
+    on_success: never # default: change
+    on_failure: always # default: always
