--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "longanime/webx",
-    "description": "Light php framework to illustrate the implementation of a web framework with static routes from scratch",
+    "description": "Light php framework to illustrate the implementation of a web framework with static routes for study purposes",
     "type": "library",
     "require": {
         "php": "^5.5"
