--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^5.5"
     },
+    "license": "MIT",
     "authors": [
         {
             "name": "Michael Lins",
