--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ notifications:
       - michael@longanime.com.br
     on_success: never # default: change
     on_failure: always # default: always
+
+script:
+- echo "skipping tests"
